@@ -1,13 +1,15 @@
 package com.edigest.journalApp.config;
 
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.security.SecurityRequirement; // Ye import add kiya
+import io.swagger.v3.oas.models.security.SecurityScheme;      // Ye import add kiya
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.oas.models.tags.Tag;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -17,15 +19,25 @@ public class SwaggerConfig {
     @Bean
     public OpenAPI myCustomConfig() {
         return new OpenAPI().info(
-                new Info().title("Journal App APIs")
-                        .description("Journal App By Ritesh Kumar")
-        ).servers(List.of(new Server().url("http://localhost:8080").description("local"),
-                new Server().url("http://localhost:8081").description("live")))
-                .tags(Arrays.asList(
+                        new Info().title("Journal App APIs")
+                                .description("Journal App By Ritesh Kumar")
+                ).servers(List.of(
+                        new Server().url("http://localhost:8080/journal").description("local"),
+                        new Server().url("http://localhost:8081/journal").description("live")
+                )).tags(Arrays.asList(
                         new Tag().name("Public APIs"),
                         new Tag().name("User APIs"),
                         new Tag().name("Journal APIs"),
                         new Tag().name("Admin APIs")
+                ))
+                .addSecurityItem(new SecurityRequirement().addList("bearerAuth"))
+                .components(new Components().addSecuritySchemes(
+                        "bearerAuth", new SecurityScheme()
+                                .type(SecurityScheme.Type.HTTP)
+                                .scheme("bearer")
+                                .bearerFormat("JWT")
+                                .in(SecurityScheme.In.HEADER)
+                                .name("Authorization")
                 ));
-    }
+    } // Ye missing bracket add kiya
 }
